# shuffly

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: clang_format.cmake  clang_tidy.cmake  compiler_warnings.cmake
src/: shuffly.cpp
